# gtkmm-examples

desktop-entry-file-creator/: .editorconfig  CMakeLists.txt
desktop-entry-file-creator/src/: main.cpp
desktop-entry-file-creator/src/app/: App.cpp  App.h
desktop-entry-file-creator/src/app/assistant/: Assistant.glade
